tests/snapshots/examples_fixtures/namespaces__namespace_member_access_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/namespaces/namespace_member_access_ok.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/namespaces/namespace_member_access_ok.flx:2:1
  |
2 | print(Math.square(5));
  | ^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/namespaces/namespace_member_access_ok.flx:2:1
  |
2 | print(Math.square(5));
  | ^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 2 errors.
== stdout ==
<not executed>
